--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
   flutter_offline: ^4.0.0
   flutter_bloc: ^8.0.0
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
